// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : Data : Cards : Antibody tests renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Antibody tests
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/california/tests-antibody"
      >
        <span
          className="a11y-only"
        >
           antibody testing 
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests (specimens)
        </div>
        <div
          className="value"
        >
          14
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total antibody tests in specimens"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests (people)
        </div>
        <div
          className="value"
        >
          12
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total antibody tests in people"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : CRDT : Cases renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Race & ethnicity: cases per capita
    </h3>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title fullWidth"
        >
          Cases per 100,000 people
        </div>
        <div
          className="value"
        />
        <div
          className="info"
        >
          <button
            aria-label="Definition of Cases per 100,000 people"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement noDefinitionLink grey"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          American Indian/Alaska Native
        </div>
        <div
          className="value"
        >
          89
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement noDefinitionLink grey"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Asian
        </div>
        <div
          className="value"
        >
          120
        </div>
      </div>
    </div>
    <p
      className="note"
    >
      (All data is calculated)
    </p>
    <div
      className="container"
    >
      <img
        alt="Clock icon"
        aria-hidden={true}
        src="test-file-stub"
        width="14px"
      />
      <span
        className="label"
      >
        Data as of
         
      </span>
      <time>
        November 19, 2020
      </time>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : CRDT : Cases renders correctly 2`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Race & ethnicity: cases per capita
    </h3>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title fullWidth"
        >
          Cases per 100,000 people
        </div>
        <div
          className="value"
        />
        <div
          className="info"
        >
          <button
            aria-label="Definition of Cases per 100,000 people"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="alert alert"
    >
      <img
        alt="Alert icon"
        src="test-file-stub"
      />
      <div>
        <p
          className="header"
        />
        <div
          className="content"
        >
          NV
           does not report this information.
           
          <a
            href="/race/get-better-data#NV"
          >
            Help us get better data.
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : CRDT : Deaths renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Race & ethnicity: deaths per capita
    </h3>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title fullWidth"
        >
          Deaths per 100,000 people
        </div>
        <div
          className="value"
        />
        <div
          className="info"
        >
          <button
            aria-label="Definition of Deaths per 100,000 people"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement noDefinitionLink grey"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          American Indian/Alaska Native
        </div>
        <div
          className="value"
        >
          4.3
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement noDefinitionLink grey"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Asian
        </div>
        <div
          className="value"
        >
          N/A
          *
        </div>
      </div>
    </div>
    <p
      className="note"
    >
      (All data is calculated)
    </p>
    <p
      className="note"
    >
      * Based on 
      &lt;
      10 deaths among members of this race/ethnicity. Interpret with caution.
    </p>
    <div
      className="container"
    >
      <img
        alt="Clock icon"
        aria-hidden={true}
        src="test-file-stub"
        width="14px"
      />
      <span
        className="label"
      >
        Data as of
         
      </span>
      <time>
        November 19, 2020
      </time>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : CRDT : Deaths renders correctly 2`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Race & ethnicity: deaths per capita
    </h3>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title fullWidth"
        >
          Deaths per 100,000 people
        </div>
        <div
          className="value"
        />
        <div
          className="info"
        >
          <button
            aria-label="Definition of Deaths per 100,000 people"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="alert alert"
    >
      <img
        alt="Alert icon"
        src="test-file-stub"
      />
      <div>
        <p
          className="header"
        />
        <div
          className="content"
        >
          NV
           does not report this information.
           
          <a
            href="/race/get-better-data#NV"
          >
            Help us get better data.
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Cases renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Cases
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/california/cases"
      >
        <span
          className="a11y-only"
        >
           cases
           
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total cases
        </div>
        <div
          className="value"
        >
          13
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total cases"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Confirmed cases
        </div>
        <div
          className="value"
        >
          5
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Confirmed cases"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Probable cases
        </div>
        <div
          className="value"
        >
          4
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Probable Cases"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        New cases today
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        14
      </span>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        Change over 7 days
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        1,730
        %+
      </span>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Cases renders correctly 2`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Cases
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/national/cases"
      >
        <span
          className="a11y-only"
        >
          national
           cases
           
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total cases
        </div>
        <div
          className="value"
        >
          13
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total cases"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        New cases today
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        14
      </span>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        Change over 7 days
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        1,730
        %+
      </span>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Hospitalization renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Hospitalization
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/california/hospitalization"
      >
        <span
          className="a11y-only"
        >
           hospitalization
           
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Now hospitalized
        </div>
        <div
          className="value"
        >
          14
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Now hospitalized"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Now in ICU
        </div>
        <div
          className="value"
        >
          13
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Now in ICU"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Now on ventilator
        </div>
        <div
          className="value"
        >
          15
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Now on ventilator"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Ever hospitalized
        </div>
        <div
          className="value"
        >
          4
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Ever hospitalized"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Ever in ICU
        </div>
        <div
          className="value"
        >
          5
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Ever in ICU"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Ever on ventilator
        </div>
        <div
          className="value"
        >
          10
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Ever on ventilator"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Hospitalization renders correctly 2`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Hospitalization
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/national/hospitalization"
      >
        <span
          className="a11y-only"
        >
          National
           hospitalization
           
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Currently hospitalized
        </div>
        <div
          className="value"
        >
          14
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Currently hospitalized"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Currently in ICU
        </div>
        <div
          className="value"
        >
          13
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Currently in ICU"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Currently on ventilator
        </div>
        <div
          className="value"
        >
          15
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Currently on ventilator"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <p
      className="note"
    >
      <a
        href="/data/hospital-facilities"
      >
        See HHS hospitalization data on a map
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Long term care card renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Long-term care (LTC)
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/texas/long-term-care"
      >
        <span
          className="a11y-only"
        >
          Texas
           long-term care data 
        </span>
        <span
          aria-hidden={true}
        >
          More data
        </span>
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total cases
        </div>
        <div
          className="value"
        >
          1,200
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Long-term care  cases"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total deaths
        </div>
        <div
          className="value"
        >
          300
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Long-term care deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Number of facilities affected
        </div>
        <div
          className="value"
        >
          0
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Long-term care facilities"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        Percent of state deaths
        <br />
         from LTC facilities
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        12.5%
      </span>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        New cases since Nov 5
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        20%
      </span>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        New deaths since Nov 5
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        50%
      </span>
    </div>
    <p
      className="note"
    >
      <a
        href="/data/state/texas/long-term-care/history"
      >
        View historical totals
      </a>
    </p>
    <div
      className="container"
    >
      <img
        alt="Clock icon"
        aria-hidden={true}
        src="test-file-stub"
        width="14px"
      />
      <span
        className="label"
      >
        Data as of
         
      </span>
      <time>
        November 12, 2020
      </time>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : National tests renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Tests
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/national/tests"
      >
        <span
          className="a11y-only"
        >
          National testing 
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests
        </div>
        <div
          className="value"
        >
          14,000
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total tests"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        New tests today
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        1,400
      </span>
    </div>
    <div
      className="drillDown"
    >
      <span
        className="label"
      >
        Change over 7 days
        <div
          aria-hidden={true}
          className="calculated"
        >
           
          (Calculated)
        </div>
      </span>
      <span
        className="value"
      >
        1,340
        %+
      </span>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Outcomes renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Outcomes
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/california/outcomes"
      >
        <span
          className="a11y-only"
        >
           outcomes
           
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Recovered
        </div>
        <div
          className="value"
        >
          14
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Recovered"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Deaths
        </div>
        <div
          className="value"
        >
          45
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Probable deaths
        </div>
        <div
          className="value"
        >
          10
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Probable deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Confirmed deaths
        </div>
        <div
          className="value"
        >
          15
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Confirmed deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Outcomes renders correctly 2`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Outcomes
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/national/deaths"
      >
        <span
          className="a11y-only"
        >
          national
           outcomes
           
        </span>
        Historical data
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Deaths
        </div>
        <div
          className="value"
        >
          45
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Probable deaths
        </div>
        <div
          className="value"
        >
          10
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Probable deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper subelement"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Confirmed deaths
        </div>
        <div
          className="value"
        >
          15
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Confirmed deaths"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Small Cards : Grade renders correctly 1`] = `
<a
  className="wrapper"
  href="#"
>
  <div
    className="container"
  >
    <img
      alt="Grade b"
      aria-hidden={true}
      className="grade"
      src="test-file-stub"
    />
    <span
      className="link"
    >
      Current race & ethnicity data quality grade
    </span>
    <span
      className="arrow"
    >
      →
    </span>
  </div>
</a>
`;

exports[`Components : Pages : Data : Cards : Small Cards : View data as graphic renders correctly 1`] = `
<a
  className="wrapper"
  href="/race/infection-and-mortality-data#NY"
>
  <div
    className="container"
  >
    <img
      alt="Chart icon"
      aria-hidden={true}
      src="test-file-stub"
      width="30px"
    />
    <span
      className="link"
    >
      Get shareable graphic
       
      <span
        className="a11y-only"
      >
        for 
        's
      </span>
      <span
        aria-hidden={true}
      >
        of
      </span>
       racial data
    </span>
    <span
      className="arrow"
    >
      →
    </span>
  </div>
</a>
`;

exports[`Components : Pages : Data : Cards : Small Cards : View racial data renders correctly 1`] = `
<a
  className="wrapper"
  href="/race/dashboard#state-ks"
>
  <div
    className="container"
  >
    <img
      alt="Spreadsheet icon"
      aria-hidden={true}
      src="test-file-stub"
      width="30px"
    />
    <span
      className="link"
    >
      View more racial data
      <span
        className="a11y-only"
      >
         for 
      </span>
    </span>
    <span
      className="arrow"
    >
      →
    </span>
  </div>
</a>
`;

exports[`Components : Pages : Data : Cards : Small Cards renders correctly 1`] = `
<a
  className="wrapper"
  href="/race/"
>
  <div
    className="container"
  >
    <p>
      child
    </p>
    <span
      className="arrow"
    >
      →
    </span>
  </div>
</a>
`;

exports[`Components : Pages : Data : Cards : Small Cards renders correctly 2`] = `
<a
  className="wrapper"
  href="https://www.theatlantic.com/"
>
  <div
    className="container"
  >
    <p>
      child
    </p>
    <span
      className="arrow"
    >
      →
    </span>
  </div>
</a>
`;

exports[`Components : Pages : Data : Cards : Viral tests renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Viral (PCR) tests
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/california/tests-viral"
      >
        <span
          className="a11y-only"
        >
           viral (PCR) testing 
        </span>
        Historical data
         
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests
          <br />
          (in test encounters)
        </div>
        <div
          className="value"
        >
          15
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total tests (test encounters)"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests
          <br />
          (in specimens)
        </div>
        <div
          className="value"
        >
          16
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total tests (specimens)"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
           
        </div>
      </div>
    </div>
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests
          <br />
          (in people)
        </div>
        <div
          className="value"
        >
          16
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total tests (people)"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Pages : Data : Cards : Viral tests renders correctly 2`] = `
<div
  className="card"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      Viral (PCR) tests
    </h3>
    <span
      className="link"
    >
      <a
        href="/data/state/california/tests-viral"
      >
        <span
          className="a11y-only"
        >
           viral (PCR) testing 
        </span>
        Historical data
         
      </a>
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="statisticWrapper"
    >
      <div
        className="statistic"
      >
        <div
          className="title"
        >
          Total tests
          <br />
          (in unclear units)
        </div>
        <div
          className="value"
        >
          16
        </div>
        <div
          className="info"
        >
          <button
            aria-label="Definition of Total tests (unclear units)"
            className="link"
            onClick={[Function]}
            type="button"
          >
            Definition
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
